@@ -1,3 +1,6 @@
+Fix up ping.cpp to use provided features to do low level stuff, adding
+features to the library if necessary.
+
 Reformat all the code according to the standard WF style.
 
 tcp_socket_stream is passing a reference up to the next class to be
